<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    android:orientation="vertical"
    android:paddingBottom="@dimen/additional_padding">

    <LinearLayout
        style="@style/header"
        android:padding="4dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:paddingLeft="@dimen/additional_padding"
            android:text="@string/app_name"
            android:textColor="@color/YP_White"
            android:textSize="@dimen/main_font"
            tools:ignore="RtlHardcoded,RtlSymmetry" />

        <Space style="@style/empty_space_horizontal" />

        <Button style="@style/hidden_search_button" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_search"
        style="@style/MainActivityButton"
        android:text="@string/search_small"
        app:icon="@drawable/lens" />

    <Button
        android:id="@+id/btn_media"
        style="@style/MainActivityButton"
        android:text="@string/media"
        app:icon="@drawable/media" />

    <Button
        android:id="@+id/btn_settings"
        style="@style/MainActivityButton"
        android:text="@string/settings"
        app:icon="@drawable/sets" />
</LinearLayout>

