<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/YP_White"
    android:orientation="vertical"
    android:paddingBottom="12dp"
    tools:context=".SettingsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="12dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/back_button"
            style="@style/backButton" />

        <TextView
            style="@style/secondaryActivityHeader"
            android:text="@string/settings" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Button
            android:layout_width="56dp"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:text="@string/search_small"
            android:visibility="invisible"
            tools:ignore="RtlHardcoded" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_padding_main"
        android:layout_marginRight="6dp"
        android:orientation="horizontal"
        tools:ignore="RtlHardcoded">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/dark_theme_title" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:switchMinWidth="56dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_main"
        android:orientation="horizontal">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/share" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/share" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_main"
        android:orientation="horizontal">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/support">

        </TextView>

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/support" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_main"
        android:orientation="horizontal">

        <TextView
            style="@style/settingsTextView"
            android:text="@string/agreement" />

        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/arr_forward" />

    </LinearLayout>
</LinearLayout>