<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.PlayerActivity"
    tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        style="@style/secondaryActivityHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/back_arrow_for_header"
        app:title="">

        <Button style="@style/hidden_search_button" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/beginGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/player_guidelines_padding" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/endGuide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/player_guidelines_padding" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/track_image"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/player_image_top_margin"
        android:maxWidth="@dimen/player_image_max_size"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/track_title"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        tools:ignore="VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/track_title"
        style="@style/HeaderTextStyle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/track_image_to_title_padding_for_player"
        android:ellipsize="end"
        android:maxLines="2"
        android:text="@string/track_title_mok"
        app:layout_constraintBottom_toTopOf="@id/artist_name"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toBottomOf="@id/track_image"
        tools:ignore="VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/artist_name"
        style="@style/player_artist_name_text_style"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/track_title_to_name_padding_for_player"
        android:ellipsize="end"
        android:lines="1"
        android:text="@string/artist_name_mok"
        app:layout_constraintBottom_toTopOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toBottomOf="@id/track_title"
        tools:ignore="VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/play_button"
        android:layout_width="@dimen/play_button_size"
        android:layout_height="@dimen/play_button_size"
        android:layout_marginTop="@dimen/play_button_to_artist_name"
        android:background="@drawable/pause_button"
        app:layout_constraintBottom_toTopOf="@id/current_play_position"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toBottomOf="@id/artist_name"
        tools:ignore="SpeakableTextPresentCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/current_play_position"
        style="@style/player_duration_text_style"
        android:layout_width="@dimen/play_button_size"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/duration_to_play_button"
        android:text="@string/duration_dots_mok"
        app:layout_constraintBottom_toTopOf="@id/duration_title"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toBottomOf="@id/play_button"
        tools:ignore="VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/plus_button"
        android:layout_width="@dimen/add_and_fav_buttons_size"
        android:layout_height="@dimen/add_and_fav_buttons_size"
        android:background="@drawable/plus_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toTopOf="@id/play_button"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/favorite_button"
        android:layout_width="@dimen/add_and_fav_buttons_size"
        android:layout_height="@dimen/add_and_fav_buttons_size"
        android:background="@drawable/favorite_button"
        app:layout_constraintBottom_toBottomOf="@id/play_button"
        app:layout_constraintEnd_toStartOf="@id/endGuide"
        app:layout_constraintHorizontal_bias="1"
        app:layout_constraintStart_toStartOf="@id/beginGuide"
        app:layout_constraintTop_toTopOf="@id/play_button"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duration_title"
        style="@style/player_table_titles_text_style"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/player_rows_to_duration"
        android:text="@string/duration_title"
        app:layout_constraintBottom_toTopOf="@id/album_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/current_play_position"
        tools:ignore="TextContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_title"
        style="@style/player_table_titles_text_style"
        android:layout_width="wrap_content"
        android:text="@string/album_title"
        app:layout_constraintBottom_toTopOf="@id/year_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/duration_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds,TextContrastCheck" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/year_title"
        style="@style/player_table_titles_text_style"
        android:layout_width="wrap_content"
        android:text="@string/year_title"
        app:layout_constraintBottom_toTopOf="@id/genre_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/album_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/genre_title"
        style="@style/player_table_titles_text_style"
        android:layout_width="wrap_content"
        android:text="@string/genre_title"
        app:layout_constraintBottom_toTopOf="@id/country_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/year_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/country_title"
        style="@style/player_table_titles_text_style"
        android:layout_width="wrap_content"
        android:text="@string/country_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/genre_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds,TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/duration_value"
        style="@style/player_table_values_text_style"
        android:text="@string/duration_dots_mok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/duration_title"
        app:layout_constraintTop_toTopOf="@id/duration_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/album_value"
        style="@style/player_table_values_text_style"
        android:text="@string/album_mok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/album_title"
        app:layout_constraintTop_toTopOf="@id/album_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/year_value"
        style="@style/player_table_values_text_style"
        android:text="@string/year_mok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/year_title"
        app:layout_constraintTop_toTopOf="@id/year_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/genre_value"
        style="@style/player_table_values_text_style"
        android:text="@string/genre_mok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/genre_title"
        app:layout_constraintTop_toTopOf="@id/genre_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/country_value"
        style="@style/player_table_values_text_style"
        android:text="@string/country_mok"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/country_title"
        app:layout_constraintTop_toTopOf="@id/country_title"
        tools:ignore="SpeakableTextPresentCheck,ImageContrastCheck,VisualLintBounds" />
</androidx.constraintlayout.widget.ConstraintLayout>