<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/fragment_common_style"
    android:orientation="vertical"
    tools:context=".search.view.SearchFragment"    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/header"
        style="@style/secondaryActivityHeader"
        app:title="@string/search_small">

        <Button style="@style/hidden_search_button" />
    </androidx.appcompat.widget.Toolbar>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginHorizontal="@dimen/search_padding"
        android:layout_marginVertical="@dimen/vertical_padding_for_search_frame"
        android:background="@drawable/search_field_background">

        <EditText
            android:id="@+id/search_bar"
            style="@style/search_bar"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:singleLine="true"
            tools:ignore="LabelFor,TextContrastCheck,TouchTargetSizeCheck,DuplicateSpeakableTextCheck,VisualLintTextFieldSize" />

        <ImageView
            android:id="@+id/clear_icon"
            android:layout_width="@dimen/search_icon_size"
            android:layout_height="@dimen/search_icon_size"
            android:layout_gravity="center|end"
            android:layout_marginHorizontal="@dimen/clear_button_horizontal_margin"
            android:contentDescription="@string/clear_button_description"
            android:scaleType="centerCrop"
            android:scaleX="2.2"
            android:scaleY="2.2"
            android:src="@drawable/clear"
            app:tint="?attr/colorOnSecondaryContainer"
            tools:ignore="ImageContrastCheck" />

    </FrameLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/been_searched_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/been_searched_header_height"
        android:layout_marginTop="@dimen/been_searched_header_margin_top"
        android:layout_marginBottom="@dimen/been_searched_header_margin_bottom"
        android:gravity="center"
        android:text="@string/searched_before_text"
        android:textAlignment="center"
        android:textColor="?attr/colorOnSecondary"
        android:textSize="@dimen/been_searched_text_size"
        android:visibility="visible"
        app:fontFamily="@font/ys_display_medium" />

    <LinearLayout
        android:id="@+id/scroll_base"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracks_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:visibility="visible"
            tools:itemCount="1"
            tools:listitem="@layout/track_row_at_search" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/clear_search_list"
            android:layout_width="@dimen/clear_history_button_width"
            android:layout_height="@dimen/clear_history_button_height"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/search_status_writings_to_button_distance"
            android:layout_weight="0"
            android:background="@drawable/update_button_background"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:text="@string/clear_history_text"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/update_button_text_size"
            android:visibility="visible"
            tools:ignore="TextSizeCheck" />
    </LinearLayout>

    <com.google.android.material.progressindicator.CircularProgressIndicator
        android:id="@+id/progress_bar"
        android:layout_width="@dimen/search_progress_bar_size"
        android:layout_height="@dimen/search_progress_bar_size"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/search_progress_bar_top_margin"
        android:indeterminate="true"
        app:indicatorColor="?attr/colorSecondary"
        app:indicatorDirectionCircular="counterclockwise"
        app:trackColor="@color/YP_Blue" />

    <LinearLayout
        android:id="@+id/placeholder_frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/search_placeholder_top_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="@dimen/search_placeholder_size"
            android:layout_height="@dimen/search_placeholder_size"
            android:layout_marginBottom="@dimen/search_status_to_writings_distance">

            <ImageView
                android:id="@+id/status_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/image_sad_smile_mus"
                tools:ignore="ContentDescription" />
        </FrameLayout>

        <TextView
            android:id="@+id/status_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center_horizontal|top"
            android:text="@string/search_status_nothing"
            android:textSize="@dimen/search_status_text_size" />

        <TextView
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/search_status_writings_to_button_distance"
            android:background="@drawable/update_button_background"
            android:fontFamily="@font/ys_display_regular"
            android:gravity="center"
            android:text="@string/update_title"
            android:textColor="?attr/colorSecondary"
            android:textSize="@dimen/update_button_text_size"
            android:visibility="visible" />
    </LinearLayout>
</LinearLayout>