<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_layout_track_row"
    android:layout_width="match_parent"
    android:layout_height="@dimen/track_row_height"
    android:background="?attr/colorSecondary"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/image_track"
        style="@style/track_row_image"
        tools:ignore="ContentDescription,ImageContrastCheck" />

    <LinearLayout
        android:id="@+id/track_texts_host"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginHorizontal="@dimen/track_row_horizontal_margin"
        android:layout_marginVertical="@dimen/track_row_writings_vertical_margin"
        android:layout_weight="1"
        android:gravity="start"
        android:orientation="vertical">

        <TextView
            android:id="@+id/track_title"
            style="@style/track_row_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/track_row_track_composition_name_height"
            android:text="@string/track_title_mok"
            android:textColor="?attr/colorOnSecondary"
            android:textSize="@dimen/track_row_text_size_big"
            tools:ignore="TextSizeCheck" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="@dimen/track_row_track_artist_name_height"
            android:gravity="start|center"
            android:orientation="horizontal"
            tools:ignore="TextSizeCheck">

            <TextView
                android:id="@+id/artist_name"
                style="@style/track_row_text"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/artist_name_mok"
                tools:ignore="InefficientWeight,TextContrastCheck,TextSizeCheck" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/track_row_track_artist_name_height"
                android:layout_height="@dimen/track_row_track_artist_name_height"
                android:src="@drawable/ic_point_centered"
                app:tint="?attr/colorSecondaryVariant"
                tools:ignore="ContentDescription,ImageContrastCheck" />

            <TextView
                android:id="@+id/track_time"
                style="@style/track_row_text"
                android:layout_width="@dimen/track_row_duration_time_width"
                android:text="@string/track_duration_mok"
                tools:ignore="TextContrastCheck,TextSizeCheck" />
        </androidx.appcompat.widget.LinearLayoutCompat>

    </LinearLayout>

    <ImageView
        android:id="@+id/go_button"
        android:layout_width="@dimen/icon_size_btn"
        android:layout_height="@dimen/icon_size_btn"
        android:layout_gravity="end|center"
        android:layout_marginTop="@dimen/track_row_go_button_margin_top"
        android:layout_marginEnd="@dimen/go_button_right_margin"
        android:layout_marginBottom="@dimen/track_row_go_button_margin_bottom"
        android:src="@drawable/arr_forward"
        app:tint="?attr/colorSecondaryVariant"
        tools:ignore="ContentDescription,ImageContrastCheck" />
</LinearLayout>